temp fix - hide stt button on mobile

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -801,11 +801,7 @@ footer {
     }
 
     #scroll-to-top {
-        bottom: 20px;
-        right: 20px;
-        width: 40px;
-        height: 40px;
-        font-size: 0.8rem;
+        display: none;
     }
 }
 
